# CS570-Adv-Comp-Arch

./: README.md  todo-list.md
Classes/: notes.md
Classes/Week-01/: notes-01.md  notes-02.md
Classes/Week-02/: notes-03.md  notes-04.md
Classes/Week-03/: notes-05.md  notes-06.md
Classes/Week-04/: notes-07.md  notes-08.md
Classes/Week-05/: notes-09.md
Classes/Week-06/: notes-10.md  notes-11.md
Classes/Week-07/: notes-12.md  notes-13.md
Projects/: 100-double-gflops.txt  CacheConfig.py  Caches.py  XBar.py  double-matrix-multi.c  float-matrix-multi.c  matrix-multi  matrix-multi.c  matrix-supersize-float-gflops.txt  matrix-supersize-float.txt  matrix-supersize.txt  output-perf-stat-1000.txt
Projects/Lab06/: BaseCPU.py  Caches.py
Projects/final-project/: .config  CS570-Presentation.pptx  Makefile  machine_kexec_64.c  module.c  notes.md  relocs.c
Projects/final-project/sonuma-vm/: CMakeCache.txt  CMakeLists.txt  KBuild.in  Makefile  README.md  cmake_install.cmake  makefile.defs
Projects/final-project/sonuma-vm/libsonuma/: Makefile  RMCdefines.h  sonuma.h  sonuma_daemon.c  sonuma_daemon.cpp  sonuma_trampoline.c
Projects/final-project/sonuma-vm/sample_code/: Makefile  bench_async.cpp  bench_sync.cpp  many_to_one.cpp  multi_qp_read.cpp  rpc_service.cpp  rpc_service_multiqp.c  rpc_sync.cpp
Projects/final-project/sonuma-vm/scripts/: reboot_vms.sh
Projects/final-project/sonuma-vm/softrmc_daemon/: Makefile  rmcd.cpp  rmcd.h  son_msg.cpp  son_msg.h
Projects/final-project/sonuma-vm/softrmc_driver/: .main.o.cmd  .mr_alloc.o.cmd  .rmc.ko.cmd  .rmc.mod.o.cmd  .rmc.o.cmd  Makefile  debug.h  main.c  modules.order  mr_alloc.c  rmc.ko  rmc.mod.c
Projects/final-project/sonuma-vm/softrmc_driver/.tmp_versions/: rmc.mod
Projects/final-project/sonuma-vm/xen_guests/: .KeyFprintDiff.out  docker_install.sh
Projects/final-project/sonuma-vm/xen_guests/sorpc_guests/: sorpc_g1_boot.cfg  sorpc_g1_install.cfg  sorpc_g2_boot.cfg  sorpc_g2_install.cfg  sorpc_g3_install.cfg  sorpc_g4_install.cfg  sorpc_g5_install.cfg
Projects/final-project/sonuma-vm/xen_guests/sorpc_guests/extras/: sorpc_g3_boot.cfg  sorpc_g4_boot.cfg  sorpc_g5_boot.cfg
Projects/prob14/: double-matrix-multi.c  float-gflops.txt
Readings/Appendix-A/: notes01.md
Readings/Chapter-01/: notes01.md  notes02.md  notes03.md  (+2 more)
grappa/: .gitignore
(+141 files in other folders)
